        - Modificados alguns sprites de UI
        - Finalizada a home screen

19-06-2025

    Pedro(registration):
        (Atualizações por conta da nova funcionalidade de conquistas)
            - Criação de um vector booleano que armazena as conquistas do jogadores
            - Atualização dos métodos update, new_user para comportar as conquistas dos jogadores
            - Inserção de um novo método "get_player" que retorna as informações do player contida no objeto
        - Lançada exceção caso o arquivo não seja aberto por alguma razão

20-06-2025

    Matsura(src,include,Makefile)
        - Criação de classe para manipular o audio do menu
        - Adaptação dos novos métodos de registration para suportar os achievements
        - Comentários dos códigos do menu
    
    Pedro(testregistration.cpp):
        - Atualização dos testes de unidade do registro após modificações na classe

    Pedro(registration):
        - Alteração do modificador de acesso para private no atributo de senha
        - Correção de bugs relacionados ao multiset após modificações
        - Remoção do set_password que não faria sentido

21-06-2025

    Matsura(src,include,Makefile)
        - Adaptação da interface para mudanças na struct de jogador
        - Nova classe de menu geral para unificar o main e deixar mais limpo

    Pedro(registration)
        - Inserção de novos atributos estatísticos para auxiliar na funcionalidade de conquistas

    Matsura(Makefile, tests)
        - Criação do doctest para o menu (ainda não funcional)
        - Correção da Makefile

    Sam (assets, game_loop, main.cpp):
        - Sonorização do loop do jogo
        - Adicionados os textos de new best e best para a tela de morte
            - Ainda falta a tela de morte mostrar qual é a melhor pontuação caso não tenha sido novo recorde

22-06-2025

    Matsura (src,include,tests)
        - Correção de bugs da interface
        - Implementação completa do doctest da interface do menu